Removed unncessary controllers

--- a/appsettings.json
+++ b/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DevConnection": "Server=localhost,1433;Database=ProductDB;Trusted_Connection=False;MultipleActiveResultSets=True;user=sa;password=MediumPuffyEy3s;"
+    "DevConnection": "Server=localhost,1433;Database=ProductsDB;Trusted_Connection=False;MultipleActiveResultSets=True;user=sa;password=MediumPuffyEy3s;"
   }
 }
